--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@ body, html {
 <div class="w3-container" style="padding:26px 16px" id="about">
   <h3 class="w3-center">ABOUT ME</h3>
   <div class="w3-row-padding w3-center" style="margin-top:8px">
-     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+     <p>My name is Enrique Alcaide Munoz I'm a Back-End Developer. Sometimes the oppotunity pass one time in life so I think that I have to get all the opportunities that the life give me to me and try to learn as much as possible of it. I consider myself a hard worker person who try to learn every day things about this world. I'm waiting for this moment that all the people wait in life and when that happend I won't let it go...
+EAM.</p>
   </div>
 </div>
 
