--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ body, html {
   <h3 class="w3-center">ABOUT ME</h3>
   <div class="w3-row-padding w3-center" style="margin-top:8px">
      <p>My name is Enrique Alcaide Munoz I'm a Back-End Developer. Sometimes the oppotunity pass one time in life so I think that I have to get all the opportunities that the life give me to me and try to learn as much as possible of it. I consider myself a hard worker person who try to learn every day things about this world. I'm waiting for this moment that all the people wait in life and when that happend I won't let it go...
-EAM.</p>
+</p><p>EAM</p>
   </div>
 </div>
 
