--- a/index.html
+++ b/index.html
@@ -92,16 +92,25 @@ body, html {
 
   <div class="w3-row-padding" style="margin-top:64px">
     <div class="w3-col l3 m6">
-      <img src="/w3images/tech_mic.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A microphone">
+      <a href="https://github.com/Enrique92/FunWithBeer" title="Fun With Beer">
+         <img src="/FunWithBeer.png" style="width:100%" class="w3-hover-opacity">
+      </a>
     </div>
     <div class="w3-col l3 m6">
-      <img src="/w3images/tech_phone.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A phone">
+      <a href="https://github.com/cornerstone18aug/silver-bullet" title="Silver Bullet">
+         <img src="/SilverBullet.png" style="width:100%" class="w3-hover-opacity">
+      </a>
     </div>
     <div class="w3-col l3 m6">
-      <img src="/w3images/tech_drone.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A drone">
+      <a href="https://github.com/Enrique92/FunWithBeer" title="Enrique Alcaide Muñoz Web Page">
+         <img src="/MyPersonalWeb.png" style="width:100%" class="w3-hover-opacity">
+      </a>
     </div>
     <div class="w3-col l3 m6">
-      <img src="/w3images/tech_sound.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Soundbox">
+      <a href="https://manzana86.neocities.org/web_lga/localizacion_propio.html" title="
+Department of Applied Geography UAM">
+         <img src="/LabGeoApl.png" style="width:100%" class="w3-hover-opacity">
+      </a>
     </div>
   </div>
 
