--- a/index.html
+++ b/index.html
@@ -92,12 +92,12 @@ body, html {
   <div class="w3-row-padding" style="margin-top:64px">
     <div class="w3-col l3 m6">
       <a href="https://github.com/Enrique92/FunWithBeer" title="Fun With Beer">
-         <img src="/FunWithBeer_1.png" style="width:50%" class="w3-hover-opacity">
+         <img src="/FunWithBeer.png" style="width:50%" class="w3-hover-opacity">
       </a>
     </div>
     <div class="w3-col l3 m6">
       <a href="https://github.com/cornerstone18aug/silver-bullet" title="Silver Bullet">
-         <img src="/SilverBullet.png" style="width:75%" class="w3-hover-opacity">
+         <img src="/SilverBullet.png" style="width:70%" class="w3-hover-opacity">
       </a>
     </div>
     <div class="w3-col l3 m6">
