--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@ body, html {
 .rounded {
  border-radius: 30px;
 }
+.letter {
+  font-size: 24px;
+}
 </style>
 <body>
 
@@ -79,7 +82,7 @@ body, html {
 <!-- About Section -->
 <div class="w3-container" style="padding:26px 16px" id="about">
   <h3 class="w3-center">ABOUT ME</h3>
-  <div class="w3-row-padding w3-center" style="margin-top:8px;font-size:24px;">
+  <div class="w3-row-padding w3-center letter" style="margin-top:8px;">
      <p>My name is Enrique Alcaide Munoz I'm a Back-End Developer. Sometimes the oppotunity pass one time in life so I think that I have to get all the opportunities that the life give me to me and try to learn as much as possible of it. I consider myself a hard worker person who try to learn every day things about this world. I'm waiting for this moment that all the people wait in life and when that happend I won't let it go...
 </p><br><p>EAM</p>
   </div>
@@ -173,7 +176,7 @@ Department of Applied Geography UAM">
 
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-64">
-  <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
+  <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right rounded"></i>To the top</a>
   <div class="w3-xlarge w3-section">
     <a href="" title="Facebook"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
     <a href="https://www.instagram.com/kike_alc92/?hl=en" title="Instagram"><i class="fa fa-instagram w3-hover-opacity"></i></a>
