--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ Department of Applied Geography UAM">
 
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-64">
-  <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right rounded"></i>To the top</a>
+  <a href="#home" class="w3-button w3-light-grey rounded><i class="fa fa-arrow-up w3-margin-right rounded"></i>To the top</a>
   <div class="w3-xlarge w3-section">
     <a href="" title="Facebook"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
     <a href="https://www.instagram.com/kike_alc92/?hl=en" title="Instagram"><i class="fa fa-instagram w3-hover-opacity"></i></a>
