--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@ body, html {
 .letter {
   font-size: 24px;
 }
+.letter2 {
+  font-size: 20px;
+}
 </style>
 <body>
 
@@ -68,8 +71,8 @@ body, html {
   <div class="w3-display-left w3-text-white" style="padding:48px">
     <span class="w3-jumbo w3-hide-small"><b>Enrique Alcaide Muñoz</b></span><br>
     <span class="w3-xxlarge w3-hide-large w3-hide-medium">Enrique Alcaide Muñoz</span><br>
-    <span class="w3-large heading2">Back End Developer</span><br>
-    <span class="w3-large heading3"><i>Sociable, hardworker and positive atittude</i></span>
+    <span class="w3-large heading2 letter">Back End Developer</span><br>
+    <span class="w3-large heading3 letter2"><i>Sociable, hardworker and positive atittude</i></span>
   </div> 
   <div class="w3-display-bottomleft w3-text-grey w3-large" style="padding:24px 48px">
     <a href="" title="Facebook"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
