--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ body, html {
 .bgimg-1 {
   background-position: center;
   background-size: cover;
-  background-image: url("/background-web-page.png");
+  background-image: url("/Images/background-web-page.png");
   min-height: 100%;
 }
 .w3-bar .w3-button {
@@ -72,9 +72,9 @@ body, html {
     <span class="w3-jumbo w3-hide-small"><b>Enrique Alcaide Muñoz</b></span><br>
     <span class="w3-xxlarge w3-hide-large w3-hide-medium">Enrique Alcaide Muñoz</span><br>
     <span class="w3-large heading2 letter">Back End Developer</span><br>
-    <span class="w3-large heading3 letter2"><i>Sociable, hardworker and positive atittude</i></span>
+    <span class="w3-large heading3 letter2"><i>"Sociable, hardworker and positive atittude"</i></span>
   </div> 
-  <div class="w3-display-bottomleft w3-text-grey w3-large" style="padding:24px 48px">
+  <div class="w3-display-bottomleft w3-text-grey w3-xlarge" style="padding:24px 48px">
     <a href="" title="Facebook"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
     <a href="https://www.instagram.com/kike_alc92/?hl=en" title="Instagram"><i class="fa fa-instagram w3-hover-opacity"></i></a>
     <a href="https://es.linkedin.com/in/enrique-alcaide-muñoz-93a2a978" title="Linkedin"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
@@ -86,7 +86,7 @@ body, html {
 <div class="w3-container" style="padding:26px 16px" id="about">
   <h3 class="w3-center">ABOUT ME</h3>
   <div class="w3-row-padding w3-center letter" style="margin-top:8px;">
-     <p>My name is Enrique Alcaide Munoz I'm a Back-End Developer. Sometimes the oppotunity pass one time in life so I think that I have to get all the opportunities that the life give me to me and try to learn as much as possible of it. I consider myself a hard worker person who try to learn every day things about this world. I'm waiting for this moment that all the people wait in life and when that happend I won't let it go...
+     <p>My name is Enrique Alcaide Munoz I'm a Back-End Developer. I believe that many oppotunities are once in a lifetime, so I try to take the advantage of every opportunity I encourage to learn as much as possible. I'm a hard work developer who is passionate about coding, and am always eager to learn. I hope to get the opportunity to connect in the future.
 </p>
   </div>
 </div>
@@ -97,23 +97,23 @@ body, html {
   <div class="w3-row-padding" style="margin-top:64px">
     <div class="w3-col l3 m6">
       <a href="https://github.com/Enrique92/FunWithBeer" title="Fun With Beer">
-         <img src="/FunWithBeer.png" style="width:50%" class="w3-hover-opacity">
+         <img src="/Images/FunWithBeer.png" style="width:50%" class="w3-hover-opacity">
       </a>
     </div>
     <div class="w3-col l3 m6">
       <a href="https://github.com/cornerstone18aug/silver-bullet" title="Silver Bullet">
-         <img src="/SilverBullet.png" style="width:65%" class="w3-hover-opacity">
+         <img src="/Images/SilverBullet.png" style="width:65%" class="w3-hover-opacity">
       </a>
     </div>
     <div class="w3-col l3 m6">
       <a href="https://github.com/Enrique92/FunWithBeer" title="Enrique Alcaide Muñoz Web Page">
-         <img src="/MyPersonalWeb.png" style="width:100%" class="w3-hover-opacity">
+         <img src="/Images/MyPersonalWeb.png" style="width:100%" class="w3-hover-opacity">
       </a>
     </div>
     <div class="w3-col l3 m6">
       <a href="https://manzana86.neocities.org/web_lga/localizacion_propio.html" title="
 Department of Applied Geography UAM">
-         <img src="/LabGeoApl.png" style="width:100%" class="w3-hover-opacity">
+         <img src="/Images/LabGeoApl.png" style="width:100%" class="w3-hover-opacity">
       </a>
     </div>
   </div>
