--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ body, html {
     <span class="w3-large heading2 letter">Back End Developer</span><br>
     <span class="w3-large heading3 letter2"><i>"Sociable, hardworker and positive atittude"</i></span>
   </div> 
-  <div class="w3-display-bottomleft w3-text-grey w3-xlarge" style="padding:24px 48px">
+  <div class="w3-display-bottomleft w3-text-white w3-xlarge" style="padding:24px 48px">
     <a href="" title="Facebook"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
     <a href="https://www.instagram.com/kike_alc92/?hl=en" title="Instagram"><i class="fa fa-instagram w3-hover-opacity"></i></a>
     <a href="https://es.linkedin.com/in/enrique-alcaide-muñoz-93a2a978" title="Linkedin"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
