--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@ body, html {
 .letter2 {
   font-size: 20px;
 }
+.descProjects {
+  text-align: justify;
+  text-justify: inter-word;
+}
 </style>
 <body>
 
@@ -99,22 +103,30 @@ body, html {
       <a href="https://github.com/Enrique92/FunWithBeer" title="Fun With Beer">
          <img src="/Images/FunWithBeer.png" style="width:50%" class="w3-hover-opacity">
       </a>
+                     <p class="descProjects"> Fun With Beer - This is a app that provide to you information about the different types of beers of each country. You can view the beer from different forms, you can see by type of beer or you can see by continent.
+         </p>
     </div>
     <div class="w3-col l3 m6">
       <a href="https://github.com/cornerstone18aug/silver-bullet" title="Silver Bullet">
          <img src="/Images/SilverBullet.png" style="width:65%" class="w3-hover-opacity">
       </a>
+               <p class="descProjects"> Silver Bullet - This game was the final project of Java for the Cornerstone International Community College of Canada, develop with JavaFX and dividing the tasks between four teammates with a extraordinary teamwork and doing very enjoyable and funny.
+         </p>
     </div>
     <div class="w3-col l3 m6">
       <a href="https://github.com/Enrique92/FunWithBeer" title="Enrique Alcaide Muñoz Web Page">
          <img src="/Images/MyPersonalWeb.png" style="width:100%" class="w3-hover-opacity">
       </a>
+                     <p class="descProjects"> Enrique Alcaide Muñoz - This is my personal web page where you can see more about myself and my personal and team projects. Also you can see more about me and my developer skills.
+         </p>
     </div>
     <div class="w3-col l3 m6">
       <a href="https://manzana86.neocities.org/web_lga/localizacion_propio.html" title="
 Department of Applied Geography UAM">
          <img src="/Images/LabGeoApl.png" style="width:100%" class="w3-hover-opacity">
       </a>
+                     <p class="descProjects"> Applied Geography Laboratory - This was the main web page for the applied geography laboratory of University Autonoma of Madrid where you can see the main content and information about the area.
+         </p>
     </div>
   </div>
 </div>
@@ -178,7 +190,7 @@ Department of Applied Geography UAM">
 
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-64">
-  <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right rounded"></i>To the top</a>
+  <a href="#home" class="w3-button w3-light-grey rounded"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
   <div class="w3-xlarge w3-section">
     <a href="" title="Facebook"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
     <a href="https://www.instagram.com/kike_alc92/?hl=en" title="Instagram"><i class="fa fa-instagram w3-hover-opacity"></i></a>
