--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@ body, html {
   text-align: justify;
   text-justify: inter-word;
 }
+.aboutMe {
+  text-align: justify;
+  text-justify: inter-word;
+}
 </style>
 <body>
 
@@ -89,7 +93,7 @@ body, html {
 <!-- About Section -->
 <div class="w3-container" style="padding:26px 16px" id="about">
   <h3 class="w3-center">ABOUT ME</h3>
-  <div class="w3-row-padding w3-center letter" style="margin-top:8px;">
+  <div class="w3-row-padding w3-center letter aboutMe" style="margin-top:8px;">
      <p>My name is Enrique Alcaide Munoz I'm a Back-End Developer. I believe that many oppotunities are once in a lifetime, so I try to take the advantage of every opportunity I encourage to learn as much as possible. I'm a hard work developer who is passionate about coding, and am always eager to learn. I hope to get the opportunity to connect in the future.
 </p>
   </div>
