--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@ body, html {
 <!-- Sidebar on small screens when clicking the menu icon -->
 <nav class="w3-sidebar w3-bar-block w3-black w3-card w3-animate-left w3-hide-medium w3-hide-large" style="display:none" id="mySidebar">
   <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16">Close ×</a>
-  <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button">ABOUT</a>
-  <a href="#work" onclick="w3_close()" class="w3-bar-item w3-button">PROJECTS</a>
-  <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button">CONTACT</a>
+  <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button"><b>ABOUT</b></a>
+  <a href="#work" onclick="w3_close()" class="w3-bar-item w3-button"><b>PROJECTS</b></a>
+  <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button"><b>CONTACT</b></a>
 </nav>
 
 <!-- Header with full-height image -->
@@ -92,7 +92,7 @@ body, html {
 
 <!-- About Section -->
 <div class="w3-container" style="padding:26px 16px" id="about">
-  <h3 class="w3-center">ABOUT ME</h3>
+  <h3 class="w3-center"><b>ABOUT ME</b></h3>
   <div class="w3-row-padding w3-center letter aboutMe" style="margin-top:8px;">
      <p>My name is Enrique Alcaide Munoz I'm a Back-End Developer. I believe that many oppotunities are once in a lifetime, so I try to take the advantage of every opportunity I encourage to learn as much as possible. I'm a hard work developer who is passionate about coding, and am always eager to learn. I hope to get the opportunity to connect in the future.
 </p>
@@ -101,27 +101,27 @@ body, html {
 
 <!-- Projects Section -->
 <div class="w3-container" style="padding:26px 16px" id="work">
-  <h3 class="w3-center">PROJECTS</h3>
+  <h3 class="w3-center"><b>PROJECTS</b></h3>
   <div class="w3-row-padding" style="margin-top:64px">
     <div class="w3-col l3 m6">
       <a href="https://github.com/Enrique92/FunWithBeer" title="Fun With Beer">
          <img src="/Images/FunWithBeer.png" style="width:50%" class="w3-hover-opacity">
       </a>
-                     <p class="descProjects"> Fun With Beer - This is a app that provide to you information about the different types of beers of each country. You can view the beer from different forms, you can see by type of beer or you can see by continent.
+                     <p class="descProjects"><u>Fun With Beer</u> - This is a app that provide to you information about the different types of beers of each country. You can view the beer from different forms, you can see by type of beer or you can see by continent.
          </p>
     </div>
     <div class="w3-col l3 m6">
       <a href="https://github.com/cornerstone18aug/silver-bullet" title="Silver Bullet">
          <img src="/Images/SilverBullet.png" style="width:65%" class="w3-hover-opacity">
       </a>
-               <p class="descProjects"> Silver Bullet - This game was the final project of Java for the Cornerstone International Community College of Canada, develop with JavaFX and dividing the tasks between four teammates with a extraordinary teamwork and doing very enjoyable and funny.
+               <p class="descProjects"><u>Silver Bullet</u> - This game was the final project of Java for the Cornerstone International Community College of Canada, develop with JavaFX and dividing the tasks between four teammates with a extraordinary teamwork and doing very enjoyable and funny.
          </p>
     </div>
     <div class="w3-col l3 m6">
       <a href="https://github.com/Enrique92/FunWithBeer" title="Enrique Alcaide Muñoz Web Page">
          <img src="/Images/MyPersonalWeb.png" style="width:100%" class="w3-hover-opacity">
       </a>
-                     <p class="descProjects"> Enrique Alcaide Muñoz - This is my personal web page where you can see more about myself and my personal and team projects. Also you can see more about me and my developer skills.
+                     <p class="descProjects"><u>Enrique Alcaide Muñoz</u> - This is my personal web page where you can see more about myself and my personal and team projects. Also you can see more about me and my developer skills.
          </p>
     </div>
     <div class="w3-col l3 m6">
@@ -129,7 +129,7 @@ body, html {
 Department of Applied Geography UAM">
          <img src="/Images/LabGeoApl.png" style="width:100%" class="w3-hover-opacity">
       </a>
-                     <p class="descProjects"> Applied Geography Laboratory - This was the main web page for the applied geography laboratory of University Autonoma of Madrid where you can see the main content and information about the area.
+                     <p class="descProjects"><u>Applied Geography Laboratory</u> - This was the main web page for the applied geography laboratory of University Autonoma of Madrid where you can see the main content and information about the area.
          </p>
     </div>
   </div>
@@ -148,7 +148,7 @@ Department of Applied Geography UAM">
 <div class="w3-container w3-light-grey w3-padding-64">
   <div class="w3-row-padding">
     <div class="w3-col m6">
-      <h3>My Skills</h3>
+      <h3><b>My Skills</b></h3>
       <p><b><i><u>Languages:</u></i></b></p>
       	<p class="w3-wide"><i class="fa"></i> - Java</p>
         <p class="w3-wide"><i class="fa"></i> - Swift</p>
@@ -183,7 +183,7 @@ Department of Applied Geography UAM">
 
 <!-- Contact Section -->
 <div class="w3-container w3-light-grey" style="padding:26px 16px" id="contact">
-  <h3 class="w3-center">CONTACT</h3>
+  <h3 class="w3-center"><b>CONTACT</b></h3>
   <div style="margin-top:48px">
     <p><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right"></i>Vancouver, BC, Canada.</p>
     <p><i class="fa fa-phone fa-fw w3-xxlarge w3-margin-right"></i>+1 (778) 689 5106</p>
