--- a/index.html
+++ b/index.html
@@ -55,8 +55,9 @@ body, html {
     <!-- Right-sided navbar links -->
     <div class="w3-right w3-hide-small">
       <a href="#about" class="w3-bar-item w3-button">ABOUT</a>
-      <a href="#work" class="w3-bar-item w3-button"></i> PROJECTS</a>
-      <a href="#contact" class="w3-bar-item w3-button"></i> CONTACT</a>
+      <a href="#work" class="w3-bar-item w3-button"></i>PROJECTS</a>
+      <a href="#skills" class="w3-bar-item w3-button"></i>SKILLS</a>
+      <a href="#contact" class="w3-bar-item w3-button"></i>CONTACT</a>
     </div>
     <!-- Hide right-floated links on small screens and replace them with a menu icon -->
 
@@ -71,6 +72,7 @@ body, html {
   <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16">Close ×</a>
   <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button"><b>ABOUT</b></a>
   <a href="#work" onclick="w3_close()" class="w3-bar-item w3-button"><b>PROJECTS</b></a>
+    <a href="#skills" onclick="w3_close()" class="w3-bar-item w3-button"><b>SKILLS</b></a>
   <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button"><b>CONTACT</b></a>
 </nav>
 
@@ -145,10 +147,9 @@ Department of Applied Geography UAM">
 </div>
 
 <!-- Skills Section -->
-<div class="w3-container w3-light-grey w3-padding-64">
-  <div class="w3-row-padding">
+<div class="w3-container w3-light-grey" style="padding:26px 16px" id="skills">
+  <h3 class="w3-center"><b>SKILLS</b></h3>
     <div class="w3-col m6">
-      <h3><b>My Skills</b></h3>
       <p><b><i><u>Languages:</u></i></b></p>
       	<p class="w3-wide"><i class="fa"></i> - Java</p>
         <p class="w3-wide"><i class="fa"></i> - Swift</p>
