--- a/index.html
+++ b/index.html
@@ -48,10 +48,11 @@ body, html {
 .profileImg {
   position: absolute;
   right: 0px;
-  padding: 10px;
-  width: 40%;
+  padding: 20px 20px 20px;
+  width: 20%;
+  width: 20%;
   border: 2px solid white;
-  border-radius: 20px
+  border-radius: 50px
 }
 </style>
 <body>
@@ -98,7 +99,7 @@ body, html {
     <a href="https://es.linkedin.com/in/enrique-alcaide-muñoz-93a2a978" title="Linkedin"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
     <a href="https://github.com/Enrique92" title="GitHub"><i class="fa fa-github w3-hover-opacity"></i></a>
   </div>
-  <img src="/Images/Profile.jpg" class="w3-hover-opacity profileImg">
+  <img src="/Images/Profile.png" class="w3-hover-opacity profileImg">
 </header>
 
 <!-- About Section -->
