--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ body, html {
   right: 0px;
   padding: 20px 20px 20px;
   width: 20%;
-  width: 20%;
+  height: 20%;
   border: 2px solid white;
   border-radius: 50px
 }
@@ -124,7 +124,7 @@ body, html {
     </div>
     <div class="w3-col l3 m6">
       <a href="https://github.com/cornerstone18aug/silver-bullet" title="Silver Bullet">
-         <img src="/Images/SilverBullet.png" style="width:99%" class="w3-hover-opacity">
+         <img src="/Images/SilverBullet.png" style="width:96%" class="w3-hover-opacity">
       </a>
                <p class="descProjects"><u>Silver Bullet</u> - This game was the final project of Java for the Cornerstone International Community College of Canada, develop with JavaFX and dividing the tasks between four teammates with a extraordinary teamwork and doing very enjoyable and funny.
          </p>
