--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ body, html {
 .profileImg {
   position: absolute;
   right: 0px;
-  padding: 20px 20px 20px;
+  padding: 60px;
   width: 20%;
   height: 20%;
   border: 2px solid white;
@@ -117,14 +117,14 @@ body, html {
   <div class="w3-row-padding" style="margin-top:64px">
     <div class="w3-col l3 m6">
       <a href="https://github.com/Enrique92/FunWithBeer" title="Fun With Beer">
-         <img src="/Images/FunWithBeer.png" style="width:55%" class="w3-hover-opacity">
+         <img src="/Images/FunWithBeer.png" style="width:55%;align-content: center;" class="w3-hover-opacity">
       </a>
                      <p class="descProjects"><u>Fun With Beer</u> - This is a app that provide to you information about the different types of beers of each country. You can view the beer from different forms, you can see by type of beer or you can see by continent.
          </p>
     </div>
     <div class="w3-col l3 m6">
       <a href="https://github.com/cornerstone18aug/silver-bullet" title="Silver Bullet">
-         <img src="/Images/SilverBullet.png" style="width:96%" class="w3-hover-opacity">
+         <img src="/Images/SilverBullet.png" style="width:97%" class="w3-hover-opacity">
       </a>
                <p class="descProjects"><u>Silver Bullet</u> - This game was the final project of Java for the Cornerstone International Community College of Canada, develop with JavaFX and dividing the tasks between four teammates with a extraordinary teamwork and doing very enjoyable and funny.
          </p>
