--- a/index.html
+++ b/index.html
@@ -48,9 +48,10 @@ body, html {
 .profileImg {
   position: absolute;
   right: 0px;
-  padding: 60px;
-  width: 20%;
-  height: 20%;
+  padding: 20px;
+  margin-top: 20%;
+  width: 30%;
+  height: 35%;
   border: 2px solid white;
   border-radius: 50px
 }
