--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@ body, html {
   position: absolute;
   right: 0px;
   padding: 20px;
-  margin-top: 20%;
-  width: 30%;
+  margin-top: 15%;
+  width: 25%;
   height: 35%;
   border: 2px solid white;
   border-radius: 50px
@@ -100,7 +100,7 @@ body, html {
     <a href="https://es.linkedin.com/in/enrique-alcaide-muñoz-93a2a978" title="Linkedin"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
     <a href="https://github.com/Enrique92" title="GitHub"><i class="fa fa-github w3-hover-opacity"></i></a>
   </div>
-  <img src="/Images/Profile.png" class="w3-hover-opacity profileImg">
+  <img src="/Images/Profile.jpg" class="w3-hover-opacity profileImg">
 </header>
 
 <!-- About Section -->
