--- a/index.html
+++ b/index.html
@@ -47,13 +47,12 @@ body, html {
 }
 .profileImg {
   position: absolute;
-  right: 0px;
-  padding: 20px;
+  right: 5%;
   margin-top: 15%;
-  width: 25%;
-  height: 35%;
+  width: 20%;
+  height: 40%;
   border: 2px solid white;
-  border-radius: 50px
+  border-radius: 60%;
 }
 </style>
 <body>
