--- a/index.html
+++ b/index.html
@@ -51,8 +51,14 @@ body, html {
   margin-top: 15%;
   width: 20%;
   height: 40%;
-  border: 2px solid white;
+  border: 10px solid white;
   border-radius: 60%;
+}
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
 </style>
 <body>
@@ -117,7 +123,7 @@ body, html {
   <div class="w3-row-padding" style="margin-top:64px">
     <div class="w3-col l3 m6">
       <a href="https://github.com/Enrique92/FunWithBeer" title="Fun With Beer">
-         <img src="/Images/FunWithBeer.png" style="width:55%;align-content: center;" class="w3-hover-opacity">
+         <img src="/Images/FunWithBeer.png" style="width:55%" class="w3-hover-opacity center">
       </a>
                      <p class="descProjects"><u>Fun With Beer</u> - This is a app that provide to you information about the different types of beers of each country. You can view the beer from different forms, you can see by type of beer or you can see by continent.
          </p>
