--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ body, html {
   position: absolute;
   right: 5%;
   margin-top: 15%;
-  max-width:: 22%;
+  max-width: 22%;
   height: auto;
   border: 6px solid white;
   border-radius: 60%;
