--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@ body, html {
   right: 5%;
   margin-top: 15%;
   max-width: 22%;
+  max-height: 40%;
+  height: auto;
   height: auto;
   border: 6px solid white;
   border-radius: 60%;
