--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ body, html {
   max-width: 22%;
   max-height: 40%;
   height: auto;
-  height: auto;
+  width: auto;
   border: 6px solid white;
   border-radius: 60%;
 }
