--- a/index.html
+++ b/index.html
@@ -127,21 +127,21 @@ body, html {
       <a href="https://github.com/Enrique92/FunWithBeer" title="Fun With Beer">
          <img src="/Images/FunWithBeer.png" style="width:67%" class="w3-hover-opacity center">
       </a>
-                     <p class="descProjects"><u>Fun With Beer</u> - This is a app that provide to you information about the different types of beers of each country. You can view the beer from different forms, you can see by type of beer or you can see by continent.
+                     <p class="descProjects"><u><b>Fun With Beer</b></u> - This is a app that provide to you information about the different types of beers of each country. You can view the beer from different forms, you can see by type of beer or you can see by continent.
          </p>
     </div>
     <div class="w3-col l3 m6">
       <a href="https://github.com/cornerstone18aug/silver-bullet" title="Silver Bullet">
          <img src="/Images/SilverBullet.png" style="width:97%" class="w3-hover-opacity">
       </a>
-               <p class="descProjects"><u>Silver Bullet</u> - This game was the final project of Java for the Cornerstone International Community College of Canada, develop with JavaFX and dividing the tasks between four teammates with a extraordinary teamwork and doing very enjoyable and funny.
+               <p class="descProjects"><u><b>Silver Bullet</b></u> - This game was the final project of Java for the Cornerstone International Community College of Canada, develop with JavaFX and dividing the tasks between four teammates with a extraordinary teamwork and doing very enjoyable and funny.
          </p>
     </div>
     <div class="w3-col l3 m6">
       <a href="https://github.com/Enrique92/FunWithBeer" title="Enrique Alcaide Muñoz Web Page">
          <img src="/Images/MyPersonalWeb.png" style="width:100%" class="w3-hover-opacity">
       </a>
-                     <p class="descProjects"><u>Enrique Alcaide Muñoz</u> - This is my personal web page where you can see more about myself and my personal and team projects. Also you can see more about me and my developer skills.
+                     <p class="descProjects"><u><b>Personal Web Page</b></u> - This is my personal web page where you can see more about myself and my personal and team projects. Also you can see more about me and my developer skills.
          </p>
     </div>
     <div class="w3-col l3 m6">
@@ -149,7 +149,7 @@ body, html {
 Department of Applied Geography UAM">
          <img src="/Images/LabGeoApl.png" style="width:100%" class="w3-hover-opacity">
       </a>
-                     <p class="descProjects"><u>Applied Geography Laboratory</u> - This was the main web page for the applied geography laboratory of University Autonoma of Madrid where you can see the main content and information about the area.
+                     <p class="descProjects"><u><b>Applied Geography Laboratory</b></u> - This was the main web page for the applied geography laboratory of University Autonoma of Madrid where you can see the main content and information about the area.
          </p>
     </div>
   </div>
