--- a/index.html
+++ b/index.html
@@ -75,7 +75,6 @@
 		<a href="#" class="left-arrow"><img src="images/left-arrow.png" /></a>
 		<a href="#" class="right-arrow"><img src="images/right-arrow.png" /></a>
 		<div class="carrusel">
-////////////////////////////////////
 			<div class="projects" id="product_0">
 				<a href="https://github.com/Enrique92/FunWithBeer" title="Fun With Beer">
 				<img src="/Images/FunWithBeer.png" style="width:67%" class="w3-hover-opacity center">
@@ -113,7 +112,7 @@
 			</div>
 		</div>
 	</div>
-////////////////////////////////////
+</div>
 <!--
 <div class="w3-container" style="padding:26px 16px" id="work">
   <h3 class="w3-center"><b>PROJECTS</b></h3>
